<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/description_backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_taskCreate"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <EditText
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:hint="@string/hint_TaskName"
        android:inputType="text"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/white"
        android:background="@drawable/button_bg"
        app:icon="@drawable/baseline_date_range_24"
        app:iconTint="@color/black"
        style="@style/Widget.AppCompat.Button"
        android:text="@string/button_date"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText" />

    <CheckBox
        android:id="@+id/checkCompleted"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_checkComplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/priorityText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:padding="5dp"
        android:text="@string/text_priorityType"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCompleted"
        app:drawableStartCompat="@drawable/baseline_priority_high_24" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        app:backgroundTint="@color/blue2"
        android:drawableEnd="@drawable/arrow_up"
        android:padding="5dp"
        android:textColor="@color/black"
        android:text="@string/button_save"
        style="@style/Widget.MaterialComponents.Button"
        android:textAllCaps="false"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.chip.ChipGroup
        android:id="@+id/priorityGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityText">

        <com.google.android.material.chip.Chip
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/button_type1"

            />

        <com.google.android.material.chip.Chip
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/button_type2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/type3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/button_type3" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:drawableStart="@drawable/baseline_category_24"
        android:padding="5dp"
        android:text="@string/text_categoryType"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categoryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryText">

        <com.google.android.material.chip.Chip
            android:id="@+id/addCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:icon="@drawable/baseline_add_16"
            app:iconTint="@color/black"
            app:chipIconVisible="true"
            android:textColor="@color/black"
            android:text="@string/button_addCategory"
            android:layout_marginEnd="10dp"
            >

        </com.google.android.material.chip.Chip>


    </com.google.android.material.chip.ChipGroup>




</androidx.constraintlayout.widget.ConstraintLayout>