<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/transparent"
    android:background="@drawable/dialog_background"
    android:padding="20dp"
    tools:context=".view.NewCategoryFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_Add_Category"
        android:textColor="@color/blue3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_category_216"
        android:contentDescription="@string/description_categoryImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/catNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_EnterCat"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/categoryColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:text="@string/text_CatColor"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catNameText" />

    <LinearLayout
        android:id="@+id/colorView"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryColorText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorView">

        <Button
            android:id="@+id/addButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/blue"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:background="@drawable/category_buttons_bg"
            android:text="@string/button_addCategory"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button" />

        <Button
            android:id="@+id/chooseColorButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:backgroundTint="@color/blue"
            android:textSize="16sp"
            android:background="@drawable/category_buttons_bg"
            android:text="@string/button_chooseColor"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>