<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <include
        android:id="@+id/include"
        layout="@layout/nav_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoriesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/text_categories"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CategoriesRecycler"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/categories_list_item"
        app:layout_constraintTop_toBottomOf="@+id/categoriesText" />

    <TextView
        android:id="@+id/TasksText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_tasks"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoriesRecycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecycler"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/tasks_list_item"
        app:layout_constraintTop_toBottomOf="@+id/TasksText"
     />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="132dp"
        android:backgroundTint="@color/blue2"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/description_addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksRecycler"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add"
        android:elevation="10dp"
        android:background="@drawable/layout_bg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
